# HostWatch

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  utils.rs
src/domain/: entities.rs
src/infrastructure/: metrics.rs
src/presentation/: api.rs  cli.rs
