[package]
name = "hostwatch"
version = "0.1.0"
edition = "2024"
license = "MIT"


[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "compression-full", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
